# deploy-server

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: main.rs
templates/: index.html
