[package]
name = "deploy-server"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.3"
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
hmac = "0.7.1"
sha-1 = "0.8.2"
bytes = "0.5.4"
hex = "0.4"
